Micro-commit to realign home page boxes centrally and use percentages as margins instead of fixed values

--- a/react-app/src/styles.css
+++ b/react-app/src/styles.css
@@ -67,8 +67,8 @@ body {
     outline: transparent;
     box-shadow: 0px;
     padding: 10px;
-    margin:auto;
-    margin-top: 50px;
+    margin-left: -60%;
+    margin-top: 25px;
     width: 1000px;
     height: 300px;
     text-align: center;
